Fixed bug #37563 (array_key_exists performance is poor for &$array).